--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "tile-fighter",
+  "description": "Tile based strategy game",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "mersenne-twister": "^1.0.1",
@@ -10,7 +12,6 @@
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "colors": "^1.1.2",
     "nodemon": "^1.8.1",
     "supervisor": "^0.9.1",
     "uglify-js": "^2.6.1",
