--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
+    "eslint": "^1.10.3",
     "nodemon": "^1.8.1",
     "supervisor": "^0.9.1",
     "uglify-js": "^2.6.1",
@@ -29,6 +30,7 @@
   },
   "scripts": {
     "build-js": "node node_modules/browserify/bin/cmd.js --entry src/app.js | node_modules/uglify-js/bin/uglifyjs --compress --mangle > .generated/bundle.js",
-    "watch-js": "node node_modules/watchify/bin/cmd.js src/app.js --debug -o .generated/bundle.js -v"
+    "watch-js": "node node_modules/watchify/bin/cmd.js src/app.js --debug -o .generated/bundle.js -v",
+    "lint": "eslint src/ "
   }
 }
