--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build-js": "node node_modules/browserify/bin/cmd.js --entry src/app.js | node_modules/uglify-js/bin/uglifyjs --compress --mangle > .generated/bundle.js",
     "watch-js": "node node_modules/watchify/bin/cmd.js src/app.js --debug -o .generated/bundle.js -v",
-    "lint": "eslint src/ "
+    "lint": "eslint src/ ",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
