--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "lodash": "4.1.0",
-    "mersenne-twister": "^1.0.1",
+    "babel-preset-stage-0": "6.3.13",
+    "lodash": "4.2.1",
+    "mersenne-twister": "1.0.1",
     "pixi.js": "https://github.com/pixijs/pixi.js/archive/v3.0.9.tar.gz"
   },
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-core": "^6.3.26",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
+    "babel": "6.3.26",
+    "babel-core": "6.4.5",
+    "babel-preset-es2015": "6.3.13",
+    "babelify": "7.2.0",
     "browserify": "13.0.0",
-    "eslint": "^1.10.3",
-    "nodemon": "^1.8.1",
-    "supervisor": "^0.9.1",
-    "uglify-js": "^2.6.1",
-    "watchify": "^3.6.1"
+    "eslint": "1.10.3",
+    "nodemon": "1.8.1",
+    "supervisor": "0.9.1",
+    "uglify-js": "2.6.1",
+    "watchify": "3.7.0"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-0"
     ]
   },
   "browserify": {
