Menubar converted to "class" and linter rules added

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,10 @@
     "no-unused-expressions": [0],
     "camelcase": [2],
     "new-cap": [2],
+    "prefer-const": [2],
+    "no-const-assign": [2],
+    "prefer-spread": [2],
+    "object-shorthand": [2],
     "space-infix-ops": [2],
     "no-loop-func": [0],
     "semi": [2, "never"],
