--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,14 @@
     "no-unused-expressions": [0],
     "camelcase": [2],
     "new-cap": [2],
+    "no-constant-condition": [0],
     "prefer-const": [2],
     "no-const-assign": [2],
     "prefer-spread": [2],
     "object-shorthand": [2],
     "space-infix-ops": [2],
     "no-loop-func": [0],
+    "no-use-before-define": [2],
     "semi": [2, "never"],
     "quotes": [2, "single"],
     "no-alert": [2],
