--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "lodash": "4.3.0",
+    "lodash": "4.4.0",
     "mersenne-twister": "1.0.1",
     "pixi.js": "https://github.com/pixijs/pixi.js/archive/v3.0.9.tar.gz"
   },
@@ -14,7 +14,9 @@
     "babel-preset-es2015": "6.5.0",
     "babelify": "7.2.0",
     "browserify": "13.0.0",
-    "eslint": "^2.1.0",
+    "chai": "3.5.0",
+    "eslint": "2.1.0",
+    "mocha": "2.4.5",
     "nodemon": "1.8.1",
     "supervisor": "0.9.1",
     "uglify-js": "2.6.1",
@@ -34,6 +36,6 @@
     "build": "node node_modules/browserify/bin/cmd.js --entry src/app.js | node_modules/uglify-js/bin/uglifyjs --compress --mangle > .generated/bundle.js",
     "watch": "node node_modules/watchify/bin/cmd.js src/app.js --debug -o .generated/bundle.js -v",
     "lint": "eslint src/ ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/_mocha --compilers js:babel-core/register -R spec test/calcSpec.js"
   }
 }
