--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "build": "node node_modules/browserify/bin/cmd.js --entry src/app.js | node_modules/uglify-js/bin/uglifyjs --compress --mangle > .generated/bundle.js",
     "watch": "node node_modules/watchify/bin/cmd.js src/app.js --debug -o .generated/bundle.js -v",
     "lint": "eslint src/ ",
-    "test": "./node_modules/mocha/bin/_mocha --compilers js:babel-core/register -R spec test/calcSpec.js"
+    "test": "_mocha --compilers js:babel-core/register -R spec test/calcSpec.js"
   }
 }
