Loads in browser, removed js files under src

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+/.idea
 node_modules/
 .idea/
 .generated/bundle.js
-*.psd
 .DS_Store
 /npm-debug.log
 /deploy.sh
+/tile-fighter.iml
+/.generated
+src/**.js*
