--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "browserify": "13.0.0",
     "chai": "3.5.0",
-    "eslint": "2.2.0",
     "mocha": "2.4.5",
     "nodemon": "1.9.1",
     "supervisor": "0.9.1",
@@ -25,7 +24,7 @@
   "scripts": {
     "build": "node tsconfig && browserify src/app.ts -p tsify -o .generated/bundle.js",
     "watch": "node node_modules/watchify/bin/cmd.js src/app.ts -p tsify --debug -o .generated/bundle.js -v",
-    "lint": "eslint src/ ",
+    "lint": "tsconfig-lint",
     "test": "_mocha --compilers js:babel-core/register -R spec test/calcSpec.js"
   }
 }
