--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "watchify": "3.7.0"
   },
   "scripts": {
-    "build": "node tsconfig && browserify src/app.ts -p tsify -o .generated/bundle.js | node_modules/uglify-js/bin/uglifyjs --compress --mangle",
-    "watch": "node node_modules/watchify/bin/cmd.js src/app.ts -p tsify --debug -o .generated/bundle.js -v",
+    "build": "node tsconfig && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
+    "build-min": "npm run build && node node_modules/uglify-js/bin/uglifyjs --compress -o .generated/bundle.js .generated/bundle.js",
+    "watch": "node node_modules/watchify/bin/cmd.js src/app.ts -p tsify --debug -v .generated/bundle.js",
     "win-watch": "node node_modules/watch/cli.js \"npm run build\" src/",
     "lint": "tsconfig-lint",
     "test": "_mocha --compilers js:babel-core/register -R spec test/calcSpec.js",
