--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "6.4.0"
+    "node": "6.9.5"
   },
   "dependencies": {
-    "lodash": "4.16.4",
+    "lodash": "4.17.4",
     "pixi.js": "https://github.com/pixijs/pixi.js/archive/v3.0.10.tar.gz"
   },
   "devDependencies": {
-    "browserify": "13.1.0",
+    "browserify": "14.4.0",
     "nodemon": "1.11.0",
-    "supervisor": "0.11.0",
+    "supervisor": "0.12.0",
     "tsconfig-glob": "0.4.3",
     "tsconfig-lint": "0.12.0",
-    "tsify": "2.0.2",
-    "typescript": "2.0.3",
-    "uglify-js": "2.7.3",
-    "watchify": "3.7.0"
+    "tsify": "3.0.1",
+    "tslint": "5.5.0",
+    "typescript": "2.4.1",
+    "uglify-js": "3.0.23",
+    "watchify": "3.9.0"
   },
   "scripts": {
     "build": "node tsconfig && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
