--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "6.9.5"
+    "node": "8.11.1"
   },
   "dependencies": {
-    "lodash": "4.17.4",
-    "pixi.js": "https://github.com/pixijs/pixi.js/archive/v3.0.10.tar.gz"
+    "lodash": "4.17.5",
+    "pixi.js": "4.7.1"
   },
   "devDependencies": {
-    "browserify": "14.4.0",
-    "nodemon": "1.11.0",
+    "@types/lodash": "4.14.106",
+    "@types/pixi.js": "4.7.2",
+    "browserify": "16.1.1",
+    "nodemon": "1.17.3",
     "supervisor": "0.12.0",
     "tsconfig-glob": "0.4.3",
     "tsconfig-lint": "0.12.0",
-    "tsify": "3.0.1",
-    "tslint": "5.5.0",
-    "typescript": "2.4.1",
-    "uglify-js": "3.0.23",
-    "watchify": "3.9.0"
+    "tsify": "3.0.4",
+    "tslint": "5.9.1",
+    "typescript": "2.8.1",
+    "uglify-js": "3.3.18",
+    "watchify": "3.11.0"
   },
   "scripts": {
     "build": "node tsconfig && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
