--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "npm run init-build-dir && node tsconfig && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
     "build-min": "npm run init-build-dir && npm run build && node node_modules/uglify-js/bin/uglifyjs --compress -o .generated/bundle.js .generated/bundle.js",
     "watch": "npm run init-build-dir && watchify src/app.ts -p tsify --debug -v -o .generated/bundle.js",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "clean": "find .generated -type f -name '*.js' -exec rm {} +"
   }
 }
