--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,134 +1,11 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "noImplicitReturns": true,
-    "preserveConstEnums": true,
-    "outDir": ".generated"
-  },
-  "exclude": [
-    ".generated",
-    "node_modules"
-  ],
-  "filesGlob": [
-    "src/**/*.ts"
-  ],
-  "lintOptions": {
-    "rules": {
-      "class-name": true,
-      "comment-format": [
-        true,
-        "check-space"
-      ],
-      "curly": true,
-      "eofline": true,
-      "forin": true,
-      "indent": [
-        true,
-        "spaces"
-      ],
-      "interface-name": false,
-      "label-position": true,
-      "label-undefined": true,
-      "max-line-length": [
-        true,
-        120
-      ],
-      "member-ordering": [
-        true,
-        "public-before-private",
-        "static-before-instance",
-        "variables-before-functions"
-      ],
-      "no-arg": true,
-      "no-bitwise": false,
-      "no-conditional-assignment": true,
-      "no-consecutive-blank-lines": false,
-      "no-console": false,
-      "no-construct": true,
-      "no-constructor-vars": true,
-      "no-debugger": true,
-      "no-duplicate-key": true,
-      "no-duplicate-variable": true,
-      "no-empty": true,
-      "no-eval": true,
-      "no-inferrable-types": true,
-      "no-internal-module": true,
-      "no-require-imports": true,
-      "no-shadowed-variable": true,
-      "no-string-literal": true,
-      "no-switch-case-fall-through": true,
-      "no-trailing-whitespace": true,
-      "no-unreachable": true,
-      "no-unused-expression": true,
-      "no-use-before-declare": true,
-      "no-var-keyword": true,
-      "no-var-requires": true,
-      "object-literal-sort-keys": true,
-      "one-line": [
-        true,
-        "check-open-brace",
-        "check-catch",
-        "check-else",
-        "check-whitespace"
-      ],
-      "quotemark": [
-        true,
-        "single",
-        "avoid-escape"
-      ],
-      "radix": true,
-      "semicolon": false,
-      "triple-equals": [
-        true,
-        "allow-null-check"
-      ],
-      "typedef": false,
-      "typedef-whitespace": [
-        true,
-        {
-          "call-signature": "nospace",
-          "index-signature": "nospace",
-          "parameter": "nospace",
-          "property-declaration": "nospace",
-          "variable-declaration": "nospace"
-        }
-      ],
-      "use-strict": [
-        true,
-        "check-module",
-        "check-function"
-      ],
-      "variable-name": [
-        false,
-        "ban-keywords"
-      ],
-      "whitespace": [
-        true,
-        "check-branch",
-        "check-decl",
-        "check-operator",
-        "check-separator",
-        "check-type"
-      ]
-    }
-  },
-  "files": [
-    "src/app.ts",
-    "src/character.ts",
-    "src/config.ts",
-    "src/keyboard.ts",
-    "src/menubar.ts",
-    "src/models.d.ts",
-    "src/references.d.ts",
-    "src/tilemap.ts",
-    "src/util.ts",
-    "src/logic/graph.ts",
-    "src/logic/gridnode.ts",
-    "src/logic/heap.ts",
-    "src/logic/path-finder.ts"
-  ]
+    "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
+    "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "lib": ["dom", "esnext"],                             /* Specify library files to be included in the compilation. */
+    "noEmit": true,
+    "strict": false,                           /* Enable all strict type-checking options. */
+    "strictNullChecks": true,
+    "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+  }
 }
