--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
   },
   "dependencies": {
     "lodash": "4.17.11",
-    "pixi.js": "4.8.2"
+    "pixi.js": "4.8.5"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.116",
+    "@types/lodash": "4.14.121",
     "browserify": "16.2.3",
-    "nodemon": "1.18.4",
+    "nodemon": "1.18.10",
     "supervisor": "0.12.0",
     "tsconfig-glob": "0.4.3",
     "tsconfig-lint": "0.12.0",
-    "tsify": "4.0.0",
-    "tslint": "5.11.0",
-    "typescript": "3.1.1",
+    "tsify": "4.0.1",
+    "tslint": "5.12.1",
+    "typescript": "3.3.3",
     "uglify-js": "3.4.9",
     "watchify": "3.11.0"
   },
   "scripts": {
     "init-build-dir": "mkdir -p .generated",
-    "build": "npm run init-build-dir && node tsconfig && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
+    "build": "npm run init-build-dir && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
     "build-min": "npm run init-build-dir && npm run build && node node_modules/uglify-js/bin/uglifyjs --compress -o .generated/bundle.js .generated/bundle.js",
     "watch": "npm run init-build-dir && watchify src/app.ts -p tsify --debug -v -o .generated/bundle.js",
     "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
