--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.121",
+    "@typescript-eslint/eslint-plugin": "1.3.0",
+    "@typescript-eslint/parser": "1.3.0",
     "browserify": "16.2.3",
+    "eslint": "5.13.0",
     "nodemon": "1.18.10",
     "supervisor": "0.12.0",
-    "tsconfig-glob": "0.4.3",
-    "tsconfig-lint": "0.12.0",
     "tsify": "4.0.1",
-    "tslint": "5.12.1",
     "typescript": "3.3.3",
+    "typescript-eslint-parser": "22.0.0",
     "uglify-js": "3.4.9",
     "watchify": "3.11.0"
   },
@@ -28,7 +29,7 @@
     "build": "npm run init-build-dir && browserify --entry src/app.ts -p tsify -o .generated/bundle.js",
     "build-min": "npm run init-build-dir && npm run build && node node_modules/uglify-js/bin/uglifyjs --compress -o .generated/bundle.js .generated/bundle.js",
     "watch": "npm run init-build-dir && watchify src/app.ts -p tsify --debug -v -o .generated/bundle.js",
-    "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "eslint": "eslint --ext .ts src --fix",
     "clean": "find .generated -type f -name '*.js' -exec rm {} +"
   }
 }
