--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/interface-name-prefix": "off",
     "comma-dangle": "error",
     "no-cond-assign": "error",
     "no-console": "error",
