--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "npm run init-build-dir && browserify --entry src/app.ts -p tsify -o public/bundle.js",
     "build-min": "npm run init-build-dir && npm run build && node node_modules/uglify-js/bin/uglifyjs --compress -o public/bundle.js public/bundle.js",
     "watch": "npm run init-build-dir && watchify src/app.ts -p tsify --debug -v -o public/bundle.js",
-    "eslint": "eslint --ext .ts src --fix",
+    "eslint": "eslint --report-unused-disable-directives --ext .ts --fix 'src' 'server/*.js'",
     "clean": "find public -type f -name '*.js' -exec rm {} +"
   }
 }
