Update eslint settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/member-delimiter-style": "off",
     "comma-dangle": "error",
     "no-cond-assign": "error",
     "no-console": "error",
