--- a/.eslintrc
+++ b/.eslintrc
@@ -4,9 +4,7 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "sourceType": "module",
-    "allowImportExportEverywhere": false,
-    "project": "./tsconfig.json"
+    "sourceType": "module"
   },
   "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
